syntax = "proto3";
package clapshot.organizer;

import public "common.proto";
import public "database.proto";

import "google/protobuf/timestamp.proto";


// This defines the gRPC API for Clapshot Organizer services.
//
// An **organizer plugin** is responsible for organizing
// Clapshot videos into UI folders and enforcing access
// control according to your particular business logic,
// perhaps by looking up projects and ACL groups from
// some LDAP or project management SQL database.
//
// Clapshot server will connect the organizer
// on startup, and sends the handshake message. Organizer
// connects back to the server and send its own
// handshake message.
//
// The organizer service must live as long as the Clapshot
// server and have a stable connection, which is why it is
// recommended to have the server actually launch the
// organizer service as a subprocess and use Unix sockets
// for communication.


// Calls that Organizer makes to Clapshot server
service OrganizerOutbound {
    rpc handshake(OrganizerInfo) returns (Empty);

    // Frontend commands

    rpc client_define_actions(ClientDefineActionsRequest) returns (Empty);  // Multiple calls will add/replace actions
    rpc client_show_page(ClientShowPageRequest) returns (Empty);
    rpc client_show_user_message(ClientShowUserMessageRequest) returns (Empty);
    rpc client_open_video(ClientOpenVideoRequest) returns (Empty);
    rpc client_set_cookies(ClientSetCookiesRequest) returns (Empty);

    // Database calls

    rpc DbGetVideos(DbGetVideosRequest) returns (DbVideoList);
    rpc DbGetComments(DbGetCommentsRequest) returns (DbCommentList);
    rpc DbGetUserMessages(DbGetUserMessagesRequest) returns (DbUserMessageList);
    rpc DbGetPropNodes(DbGetPropNodesRequest) returns (DbPropNodeList);
    rpc DbGetSingletonPropNode(DbGetSingletonPropNodeRequest) returns (DbGetSingletonPropNodeResponse);
    rpc DbGetPropEdges(DbGetPropEdgesRequest) returns (DbPropEdgeList);

    rpc DbUpsert(DbUpsertRequest) returns (DbUpsertResponse);
    rpc DbDelete(DbDeleteRequest) returns (DbDeleteResponse);

    // Explicit transaction calls. You should probably wrap these in RAII guards in your program code.
    // Don't expect nested transactions to work reliably.

    rpc DbBeginTransaction(DbBeginTransactionRequest) returns (Empty);
    rpc DbCommitTransaction(DbCommitTransactionRequest) returns (Empty);
    rpc DbRollbackTransaction(DbRollbackTransactionRequest) returns (Empty);
}

// Calls that Clapshot server makes to Organizer
service OrganizerInbound {
    rpc handshake(ServerInfo) returns (Empty);

    rpc on_start_user_session(OnStartUserSessionRequest) returns (OnStartUserSessionResult);
    rpc navigate_page(NavigatePageRequest) returns (ClientShowPageRequest);
    rpc authz_user_action(AuthzUserActionRequest) returns (AuthzResult);
    rpc cmd_from_client(CmdFromClientRequest) returns (Empty);

    // Unit / integration tests
    rpc list_tests(Empty) returns (ListTestsResult);
    rpc run_test(RunTestRequest) returns (RunTestResult);
}

// ---------------------------------------------------------

message ServerInfo {

    message Database {
        // Use direct database connection only as a last resort hack.
        // gRPC API methods are more future-proof and robust.
        enum DatabaseType {
            SQLITE = 0;
        }
        DatabaseType type = 1;
        string endpoint = 2;
    }

    message Storage {
        message LocalFilesystem {
            string base_dir = 1;
        }
        oneof storage {
            LocalFilesystem local_fs = 1;
        }
    }

    message GrpcEndpoint {
        message Unix {
            string path = 1;
        }
        message TCP {
            string host = 1;
            uint32 port = 2;
        }
        oneof endpoint {
            Unix unix = 1;
            TCP tcp = 2;
        }
    }

    SemanticVersionNumber version = 1;
    Storage storage = 3;
    string url_base = 4;
    Database db = 5;
    GrpcEndpoint backchannel = 6;
}

message OrganizerInfo {
}

message SemanticVersionNumber {
    uint64 major = 1;
    uint64 minor = 2;
    uint64 patch = 3;
}

// ---------------------------------------------------------

message UserSessionData {
    string sid = 1;
    UserInfo user = 2;
    map<string, string> cookies = 3;
}

// ---------------------------------------------------------
// Server -> Organizer commands
// ---------------------------------------------------------

message OnStartUserSessionRequest {
    UserSessionData ses = 1;
}

message OnStartUserSessionResult {}

message NavigatePageRequest {
    UserSessionData ses = 1;
}

message CmdFromClientRequest {
    UserSessionData ses = 1;
    string cmd = 2;
    string args = 3;    // Arbitrary data from your own Action handler that is executed on the client
}

message AuthzUserActionRequest {

    message OtherOp {
        enum Op {
            LOGIN = 0;
            VIEW_HOME = 1;
            UPLOAD_VIDEO = 2;
            JOIN_COLLAB_SESSION = 10;
        }
        Op op = 1;
        optional string subject = 2;
    }

    message VideoOp {
        enum Op {
            VIEW = 0;
            RENAME = 1;
            DELETE = 2;
            COMMENT = 3;
        }
        Video video = 1;
        Op op = 2;
    }

    message CommentOp {
        enum Op {
            EDIT = 0;
            DELETE = 1;
        }
        Comment comment = 1;
        Op op = 2;
    }

    UserSessionData ses = 1;
    oneof op {
        OtherOp other_op = 8;
        VideoOp video_op = 9;
        CommentOp comment_op = 10;
    }
}

message AuthzResult {
    optional bool is_authorized = 1;     // If not set, leave authorization decision to server
    optional string message = 2;         // e.g. "You are not authorized to view this video"
    optional string details = 3;         // e.g. "You are not a member of the project"
}

// --- Unit / integration tests ---

message ListTestsResult {
    repeated string test_names = 1;
}

message RunTestRequest {
    string test_name = 1;
}

message RunTestResult {
    string output = 1;
    optional string error = 2;
}

// ---------------------------------------------------------
// Organizer -> Server commands
// ---------------------------------------------------------

message ClientShowPageRequest {
    string sid = 1;
    repeated PageItem page_items = 2;
}

message ClientShowUserMessageRequest {
    UserMessage msg = 1;
    oneof recipient {
        string sid = 100;               // send to client with this session ID
        string user_temp = 101;         // send to all session with this username
        string user_persist = 102;      // send to all sessions with this username, and store in DB
        string video_id = 103;          // send to all clients watching this video
        string collab_session = 104;    // send to all clients in this collaboration session
    }
}

message ClientDefineActionsRequest {
    string sid = 1;
    map<string, ActionDef> actions = 2; // e.g. "rename" -> {label: "Rename", icon: "edit"}
}

// Tell client of session `sid` to open video `id` in the video player
message ClientOpenVideoRequest {
    string sid = 1;
    string id = 2;
}

message ClientSetCookiesRequest {
    string sid = 1;
    map<string, string> cookies = 2;
    optional google.protobuf.Timestamp expire_time = 3;
}

message DeleteVideoRequest {
    string id = 1;
}

message ModifyVideoRequest {
    string id = 1;
    Video new_data = 2;
}
